fix lỗi áp mã trừ sai, fix lỗi áp mã cho sản phẩm riêng