@@ -15,36 +15,30 @@ import java.util.stream.Collectors;
 
 /**
  * Service chứa toàn bộ logic nghiệp vụ cho trang Bán Hàng Tại Quầy (POS).
+ * - Tính tiền, áp voucher đúng phạm vi (SP / toàn cửa hàng)
+ * - Kiểm tra điều kiện đơn hàng tối thiểu
+ * - Áp giảm PERCENT / AMOUNT đúng
+ * - Giảm không vượt quá GiamToiDa (nếu có) và không vượt quá phần áp dụng
  */
 @Service
-@RequiredArgsConstructor // Tự động inject các repository
+@RequiredArgsConstructor
 public class BanHangTaiQuayService {
 
-    // Các repository cần thiết
     private final HoaDonRepository hoaDonRepo;
     private final HoaDonChiTietRepository hoaDonChiTietRepo;
     private final SanPhamChiTietRepository sanPhamChiTietRepo;
     private final NguoiDungRepository nguoiDungRepo;
     private final GiamGiaRepository giamGiaRepo;
-    private final ThanhToanRepository thanhToanRepository; // Đảm bảo đã inject
+    private final ThanhToanRepository thanhToanRepository;
 
-    /**
-     * Lấy danh sách sản phẩm (đã fix LazyInitializationException)
-     */
     public List<SanPhamChiTiet> getDanhSachSanPham() {
         return sanPhamChiTietRepo.findAllWithSanPham();
     }
 
-    /**
-     * Lấy giỏ hàng (đã fix LazyInitializationException)
-     */
     public List<HoaDonChiTiet> getChiTietCuaHoaDon(Integer idHoaDon) {
         return hoaDonChiTietRepo.findByHoaDon_Id_WithSanPham(idHoaDon);
     }
 
-    /**
-     * Thêm sản phẩm vào hóa đơn (hoặc cập nhật số lượng nếu đã tồn tại).
-     */
     @Transactional
     public HoaDonChiTiet addSanPhamVaoHoaDon(Integer idHoaDon, Integer idSPCT, Integer soLuong) {
         HoaDon hoaDon = hoaDonRepo.findById(idHoaDon)
@@ -52,18 +46,14 @@ public class BanHangTaiQuayService {
         SanPhamChiTiet spct = sanPhamChiTietRepo.findById(idSPCT)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy sản phẩm"));
 
-        if (spct.getSoLuongTon() < soLuong) {
-            throw new RuntimeException("Số lượng tồn kho không đủ (" + spct.getSoLuongTon() + ")");
-        }
+        int ton = spct.getSoLuongTon() != null ? spct.getSoLuongTon() : 0;
+        if (ton < soLuong) throw new RuntimeException("Số lượng tồn kho không đủ (" + ton + ")");
 
-        HoaDonChiTiet hdct = (HoaDonChiTiet) hoaDonChiTietRepo.findByHoaDonAndSanPhamChiTiet(hoaDon, spct)
-                .orElse(null);
+        HoaDonChiTiet hdct = hoaDonChiTietRepo.findByHoaDonAndSanPhamChiTiet(hoaDon, spct).orElse(null);
 
         if (hdct != null) {
             int soLuongMoi = hdct.getSoLuong() + soLuong;
-            if (spct.getSoLuongTon() < soLuongMoi) {
-                throw new RuntimeException("Tổng số lượng vượt quá tồn kho (" + spct.getSoLuongTon() + ")");
-            }
+            if (soLuongMoi > ton) throw new RuntimeException("Tổng số lượng vượt quá tồn kho (" + ton + ")");
             hdct.setSoLuong(soLuongMoi);
         } else {
             hdct = new HoaDonChiTiet();
@@ -74,40 +64,33 @@ public class BanHangTaiQuayService {
             hdct.setNgayTao(LocalDateTime.now());
         }
 
-        HoaDonChiTiet savedHDCT = hoaDonChiTietRepo.save(hdct);
+        HoaDonChiTiet saved = hoaDonChiTietRepo.save(hdct);
         updateTongTienHoaDon(hoaDon);
-        return savedHDCT;
+        return saved;
     }
 
-    /**
-     * Tăng số lượng của một sản phẩm trong giỏ hàng.
-     */
     @Transactional
     public HoaDonChiTiet tangSoLuong(Integer idHoaDonChiTiet) {
         HoaDonChiTiet hdct = hoaDonChiTietRepo.findById(idHoaDonChiTiet)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy chi tiết hóa đơn"));
 
         int soLuongMoi = hdct.getSoLuong() + 1;
-        if (hdct.getSanPhamChiTiet().getSoLuongTon() < soLuongMoi) {
-            throw new RuntimeException("Không đủ tồn kho");
-        }
+        int ton = hdct.getSanPhamChiTiet().getSoLuongTon() != null ? hdct.getSanPhamChiTiet().getSoLuongTon() : 0;
+        if (soLuongMoi > ton) throw new RuntimeException("Không đủ tồn kho");
 
         hdct.setSoLuong(soLuongMoi);
-        HoaDonChiTiet savedHDCT = hoaDonChiTietRepo.save(hdct);
+        HoaDonChiTiet saved = hoaDonChiTietRepo.save(hdct);
         updateTongTienHoaDon(hdct.getHoaDon());
-        return savedHDCT;
+        return saved;
     }
 
-    /**
-     * Giảm số lượng của một sản phẩm trong giỏ hàng.
-     */
     @Transactional
     public void giamSoLuong(Integer idHoaDonChiTiet) {
         HoaDonChiTiet hdct = hoaDonChiTietRepo.findById(idHoaDonChiTiet)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy chi tiết hóa đơn"));
+
         HoaDon hoaDon = hdct.getHoaDon();
         int soLuongMoi = hdct.getSoLuong() - 1;
-
         if (soLuongMoi <= 0) {
             hoaDonChiTietRepo.delete(hdct);
         } else {
@@ -117,9 +100,6 @@ public class BanHangTaiQuayService {
         updateTongTienHoaDon(hoaDon);
     }
 
-    /**
-     * Xóa vĩnh viễn 1 sản phẩm khỏi giỏ hàng.
-     */
     @Transactional
     public void xoaSanPhamVinhVien(Integer idHoaDonChiTiet) {
         HoaDonChiTiet hdct = hoaDonChiTietRepo.findById(idHoaDonChiTiet)
@@ -129,55 +109,34 @@ public class BanHangTaiQuayService {
         updateTongTienHoaDon(hoaDon);
     }
 
-    /**
-     * Tìm kiếm khách hàng (dùng cho modal).
-     */
     public List<NguoiDung> searchKhachHang(String keyword) {
-        if (keyword == null || keyword.trim().isEmpty()) {
-            return List.of();
-        }
-
-        // Nếu đã tạo searchKhachHangForPos trong repository thì dùng, không thì dùng method cũ
+        if (keyword == null || keyword.isBlank()) return List.of();
         return nguoiDungRepo.searchKhachHangForPos(keyword.trim());
-        // Hoặc:
-        // return nguoiDungRepo.findBySdtContainingOrHoTenContaining(keyword.trim(), keyword.trim());
     }
 
-    /**
-     * Lấy tất cả khách hàng (dùng cho modal).
-     */
     public List<NguoiDung> getAllKhachHang() {
         return nguoiDungRepo.findByVaiTro("KHACHHANG");
     }
 
-    /**
-     * Gán khách hàng (có sẵn) vào hóa đơn.
-     */
     @Transactional
     public HoaDon ganKhachHang(Integer idHoaDon, Integer idKhachHang) {
         HoaDon hoaDon = hoaDonRepo.findById(idHoaDon)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy hóa đơn"));
-        NguoiDung khachHang = nguoiDungRepo.findById(Long.valueOf(idKhachHang))
+        NguoiDung kh = nguoiDungRepo.findById(Long.valueOf(idKhachHang))
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy khách hàng"));
-        hoaDon.setKhachHang(khachHang);
+        hoaDon.setKhachHang(kh);
         return hoaDonRepo.save(hoaDon);
     }
 
-    /**
-     * Cập nhật thông tin khách hàng từ form nhập tay ở màn POS.
-     * KHÔNG tạo NguoiDung mới để tránh lỗi MatKhau NOT NULL.
-     */
     @Transactional
     public void capNhatThongTinKhach(Integer idHoaDon,
                                      String hoTen,
                                      String sdt,
                                      String email,
                                      String diaChi) {
-
         HoaDon hoaDon = hoaDonRepo.findById(idHoaDon)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy hóa đơn"));
 
-        // Nếu user không nhập gì thì thôi khỏi làm gì
         if ((hoTen == null || hoTen.isBlank())
                 && (sdt == null || sdt.isBlank())
                 && (email == null || email.isBlank())
@@ -186,57 +145,68 @@ public class BanHangTaiQuayService {
         }
 
         NguoiDung khachHang = hoaDon.getKhachHang();
-
-        // Chỉ UPDATE nếu là khách hàng (vai trò KHACHHANG) đã gán trước đó (qua modal)
         if (khachHang != null && "KHACHHANG".equalsIgnoreCase(khachHang.getVaiTro())) {
-
             if (hoTen != null && !hoTen.isBlank()) khachHang.setHoTen(hoTen);
             if (sdt != null && !sdt.isBlank()) khachHang.setSdt(sdt);
             if (email != null && !email.isBlank()) khachHang.setEmail(email);
             if (diaChi != null && !diaChi.isBlank()) khachHang.setDiaChi(diaChi);
-
             nguoiDungRepo.save(khachHang);
         }
-
-        // Không tạo khách mới nữa -> tránh lỗi MatKhau NULL
-        // Thông tin nhập tay vẫn được dùng làm thông tin giao hàng trong thanhToanHoaDonTaiQuay(...)
     }
 
     /**
-     * Áp dụng mã giảm giá.
+     * Áp dụng mã giảm giá cho hóa đơn - kiểm tra điều kiện trước khi gán
+     * -> Nếu không thỏa, ném RuntimeException với thông báo rõ ràng
      */
     @Transactional
     public HoaDon applyVoucher(Integer idHoaDon, String maGiamGia) {
         HoaDon hoaDon = hoaDonRepo.findById(idHoaDon)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy hóa đơn"));
+
         GiamGia giamGia = giamGiaRepo.findByMa(maGiamGia)
                 .orElseThrow(() -> new RuntimeException("Mã giảm giá không hợp lệ"));
 
-        hoaDon.setGiamGia(giamGia);
-        hoaDon.setTienGiamGia(giamGia.getGiaTri());
+        // Lấy chi tiết hiện tại
+        List<HoaDonChiTiet> chiTiets = hoaDonChiTietRepo.findByHoaDon_Id(idHoaDon);
+        if (chiTiets.isEmpty()) throw new RuntimeException("Hóa đơn không có sản phẩm");
 
+        // Tính tổng tiền áp dụng theo phạm vi voucher
+        BigDecimal tongTienApDung = calculateApplicableSubtotal(giamGia, chiTiets);
+
+        // Kiểm tra điều kiện đơn hàng tối thiểu (nếu có)
+        if (giamGia.getDonHangToiThieu() != null && giamGia.getDonHangToiThieu().compareTo(BigDecimal.ZERO) > 0) {
+            if (tongTienApDung.compareTo(giamGia.getDonHangToiThieu()) < 0) {
+                throw new RuntimeException("Mã giảm giá không áp dụng: chưa đạt điều kiện đơn hàng tối thiểu");
+            }
+        }
+
+        // Nếu voucher áp cho 1 sản phẩm nhưng giỏ không có sản phẩm đó -> báo lỗi
+        if (giamGia.getSanPhamChiTiet() != null && tongTienApDung.compareTo(BigDecimal.ZERO) == 0) {
+            throw new RuntimeException("Mã giảm giá không áp dụng cho sản phẩm này");
+        }
+
+        // Tính tiền giảm chính xác (theo phạm vi)
+        BigDecimal tienGiam = calculateDiscountAmount(giamGia, tongTienApDung);
+
+        // Gán voucher và tienGiamGia lên hóa đơn
+        hoaDon.setGiamGia(giamGia);
+        hoaDon.setTienGiamGia(tienGiam);
+
+        // Cập nhật tổng tiền (hàm sẽ dùng hoaDon.getGiamGia() hoặc hoaDon.getTienGiamGia())
         updateTongTienHoaDon(hoaDon);
-        return hoaDon;
+        return hoaDonRepo.save(hoaDon);
     }
 
-    /**
-     * Hủy/Gỡ mã giảm giá.
-     */
     @Transactional
     public HoaDon removeVoucher(Integer idHoaDon) {
         HoaDon hoaDon = hoaDonRepo.findById(idHoaDon)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy hóa đơn"));
-
         hoaDon.setGiamGia(null);
         hoaDon.setTienGiamGia(BigDecimal.ZERO);
-
         updateTongTienHoaDon(hoaDon);
-        return hoaDon;
+        return hoaDonRepo.save(hoaDon);
     }
 
-    /**
-     * Logic thanh toán cho hóa đơn tại quầy.
-     */
     @Transactional
     public HoaDon thanhToanHoaDonTaiQuay(Integer idHoaDon,
                                          String tenNguoiNhan, String sdtGiaoHang,
@@ -245,73 +215,47 @@ public class BanHangTaiQuayService {
 
         HoaDon hoaDon = hoaDonRepo.findById(idHoaDon)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy hóa đơn"));
+
         List<HoaDonChiTiet> chiTiets = hoaDonChiTietRepo.findByHoaDon_Id(idHoaDon);
+        if (chiTiets.isEmpty()) throw new RuntimeException("Hóa đơn không có sản phẩm nào");
 
-        if (chiTiets.isEmpty()) {
-            throw new RuntimeException("Hóa đơn không có sản phẩm nào");
-        }
-
-        // 1. Gán nhân viên (tạm fix cứng ID 2)
         NguoiDung nhanVien = nguoiDungRepo.findById(2L)
-                .orElseThrow(() -> new RuntimeException("LỖI FIX CỨNG: Không tìm thấy Nhân Viên (ID 2)."));
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy Nhân Viên (ID 2)."));
         hoaDon.setNhanVien(nhanVien);
 
-        // 2. KHÔNG tự gán "Khách lẻ" ID=1 nữa.
-        // Nếu cần gán khách thì đã gán trước đó (qua modal).
-
-        // 3. Gán Hình thức thanh toán
         ThanhToan ttMacDinh = thanhToanRepository.findById(1L)
-                .orElseThrow(() -> new RuntimeException("LỖI CẤU HÌNH: Không tìm thấy 'Hình thức thanh toán' (ID 1)."));
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy 'Hình thức thanh toán' (ID 1)."));
         hoaDon.setThanhToan(ttMacDinh);
 
-        // 4. LƯU THÔNG TIN GIAO HÀNG / NGƯỜI NHẬN
         NguoiDung kh = hoaDon.getKhachHang();
+        if ((tenNguoiNhan == null || tenNguoiNhan.isBlank()) && kh != null) tenNguoiNhan = kh.getHoTen();
+        if ((sdtGiaoHang == null || sdtGiaoHang.isBlank()) && kh != null) sdtGiaoHang = kh.getSdt();
+        if ((diaChiGiaoHang == null || diaChiGiaoHang.isBlank()) && kh != null) diaChiGiaoHang = kh.getDiaChi();
 
-        // Nếu form chưa có tên người nhận nhưng hóa đơn có khách -> lấy tên khách
-        if ((tenNguoiNhan == null || tenNguoiNhan.isBlank()) && kh != null) {
-            tenNguoiNhan = kh.getHoTen();
-        }
-
-        // Nếu form chưa có SĐT giao hàng nhưng hóa đơn có khách -> lấy SĐT khách
-        if ((sdtGiaoHang == null || sdtGiaoHang.isBlank()) && kh != null) {
-            sdtGiaoHang = kh.getSdt();
-        }
-
-        // Nếu form chưa có địa chỉ giao hàng nhưng hóa đơn có khách -> lấy địa chỉ khách
-        if ((diaChiGiaoHang == null || diaChiGiaoHang.isBlank()) && kh != null) {
-            diaChiGiaoHang = kh.getDiaChi();
-        }
-
-        // Không còn bịa "Khách lẻ" nếu vẫn null, cứ để null nếu không có gì
         hoaDon.setTenNguoiNhan(tenNguoiNhan);
         hoaDon.setSdt(sdtGiaoHang);
         hoaDon.setDiaChi(diaChiGiaoHang);
         hoaDon.setPhiShip(phiShip != null ? phiShip : BigDecimal.ZERO);
 
-        // cập nhật tổng tiền
+        // cập nhật tiền (sẽ tính lại giảm nếu voucher tồn tại)
         updateTongTienHoaDon(hoaDon);
 
-        // Xử lý tiền khách đưa (có thể null)
+        // Xử lý tiền khách đưa
         if (soTienKhachDua != null) {
             BigDecimal tong = hoaDon.getTongThanhToan();
             hoaDon.setSoTienKhachDua(soTienKhachDua);
-            hoaDon.setSoTienTraLai(
-                    soTienKhachDua.subtract(tong).max(BigDecimal.ZERO)
-            );
+            hoaDon.setSoTienTraLai(soTienKhachDua.subtract(tong).max(BigDecimal.ZERO));
         }
 
-        // 5. Trừ tồn kho
+        // Trừ tồn kho
         for (HoaDonChiTiet hdct : chiTiets) {
             SanPhamChiTiet spct = hdct.getSanPhamChiTiet();
-            int tonKhoMoi = spct.getSoLuongTon() - hdct.getSoLuong();
-            if (tonKhoMoi < 0) {
-                throw new RuntimeException("Hết hàng: " + spct.getSanPham().getTenNuocHoa());
-            }
-            spct.setSoLuongTon(tonKhoMoi);
+            int tonMoi = spct.getSoLuongTon() - hdct.getSoLuong();
+            if (tonMoi < 0) throw new RuntimeException("Hết hàng: " + spct.getSanPham().getTenNuocHoa());
+            spct.setSoLuongTon(tonMoi);
             sanPhamChiTietRepo.save(spct);
         }
 
-        // 6. Cập nhật trạng thái
         hoaDon.setTrangThai("DA_THANH_TOAN");
         hoaDon.setNgayThanhToan(LocalDateTime.now());
 
@@ -319,7 +263,11 @@ public class BanHangTaiQuayService {
     }
 
     /**
-     * (Helper) Tính toán và cập nhật lại tổng tiền cho hóa đơn.
+     * Tính và cập nhật lại tổng tiền cho hóa đơn.
+     * - Tính tongTienHang từ chi tiết
+     * - Lấy phiShip
+     * - Nếu hoaDon.getGiamGia() != null => tính tienGiamGia đúng phạm vi bằng helper
+     * - Cập nhật hoaDon.tongThanhToan = tongTienHang + phiShip - tienGiamGia (không âm)
      */
     private void updateTongTienHoaDon(HoaDon hoaDon) {
         if (hoaDon == null) return;
@@ -327,33 +275,103 @@ public class BanHangTaiQuayService {
         List<HoaDonChiTiet> chiTiets = hoaDonChiTietRepo.findByHoaDon_Id(hoaDon.getId());
 
         BigDecimal tongTienHang = chiTiets.stream()
-                .map(hdct -> hdct.getDonGia().multiply(BigDecimal.valueOf(hdct.getSoLuong())))
+                .map(h -> h.getDonGia().multiply(BigDecimal.valueOf(h.getSoLuong())))
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         hoaDon.setTongTienHang(tongTienHang);
 
-        // PHÍ SHIP SẼ ĐƯỢC CỘNG VÀO TỔNG THANH TOÁN
         BigDecimal phiShip = (hoaDon.getPhiShip() != null) ? hoaDon.getPhiShip() : BigDecimal.ZERO;
-        BigDecimal giamGia = (hoaDon.getTienGiamGia() != null) ? hoaDon.getTienGiamGia() : BigDecimal.ZERO;
 
-        BigDecimal tongThanhToan = tongTienHang.add(phiShip).subtract(giamGia);
-        hoaDon.setTongThanhToan(tongThanhToan.max(BigDecimal.ZERO));
+        BigDecimal tienGiamGia = BigDecimal.ZERO;
+        // Nếu có voucher gán trên hoadon -> tính lại dựa trên chi tiết hiện tại
+        if (hoaDon.getGiamGia() != null) {
+            GiamGia gg = hoaDon.getGiamGia();
+            BigDecimal tongTienApDung = calculateApplicableSubtotal(gg, chiTiets);
+
+            // Kiểm tra điều kiện tối thiểu (nếu không đủ thì không áp)
+            if (gg.getDonHangToiThieu() != null && gg.getDonHangToiThieu().compareTo(BigDecimal.ZERO) > 0
+                    && tongTienApDung.compareTo(gg.getDonHangToiThieu()) < 0) {
+                tienGiamGia = BigDecimal.ZERO;
+                // giữ voucher nhưng không áp tiền giảm
+            } else {
+                tienGiamGia = calculateDiscountAmount(gg, tongTienApDung);
+            }
+        } else {
+            // fallback nếu trước đó có set trực tiếp tienGiamGia
+            tienGiamGia = (hoaDon.getTienGiamGia() != null) ? hoaDon.getTienGiamGia() : BigDecimal.ZERO;
+        }
+
+        // không cho tiền giảm vượt quá tổng áp dụng hoặc tổng hàng
+        if (tienGiamGia.compareTo(tongTienHang) > 0) tienGiamGia = tongTienHang;
+        hoaDon.setTienGiamGia(tienGiamGia);
+
+        BigDecimal tongThanhToan = tongTienHang.add(phiShip).subtract(tienGiamGia).max(BigDecimal.ZERO);
+        hoaDon.setTongThanhToan(tongThanhToan);
 
         hoaDonRepo.save(hoaDon);
     }
 
+    /**
+     * Tính tổng tiền "áp dụng" theo phạm vi giảm của GiamGia:
+     * - Nếu giamGia.sanPhamChiTiet != null => chỉ cộng các item có id = sanPhamChiTiet.id
+     * - Ngược lại => trả về tổng giỏ (tất cả)
+     */
+    private BigDecimal calculateApplicableSubtotal(GiamGia giamGia, List<HoaDonChiTiet> chiTiets) {
+        if (giamGia == null) return BigDecimal.ZERO;
+
+        if (giamGia.getSanPhamChiTiet() != null) {
+            Integer spId = giamGia.getSanPhamChiTiet().getId();
+            return chiTiets.stream()
+                    .filter(h -> h.getSanPhamChiTiet() != null && h.getSanPhamChiTiet().getId().equals(spId))
+                    .map(h -> h.getDonGia().multiply(BigDecimal.valueOf(h.getSoLuong())))
+                    .reduce(BigDecimal.ZERO, BigDecimal::add);
+        } else {
+            // Toàn cửa hàng
+            return chiTiets.stream()
+                    .map(h -> h.getDonGia().multiply(BigDecimal.valueOf(h.getSoLuong())))
+                    .reduce(BigDecimal.ZERO, BigDecimal::add);
+        }
+    }
+
+    /**
+     * Tính số tiền giảm thực tế dựa trên loại giảm và cap GiamToiDa:
+     * - PERCENT: subtotal * (giaTri / 100)
+     * - AMOUNT: giaTri (cố định)
+     * Sau đó:
+     * - nếu giamToiDa != null -> cap = min(cap,giamToiDa)
+     * - trả về min(result, subtotal) (không vượt quá phần áp dụng)
+     */
+    private BigDecimal calculateDiscountAmount(GiamGia giamGia, BigDecimal subtotalApDung) {
+        if (giamGia == null || subtotalApDung == null) return BigDecimal.ZERO;
+
+        BigDecimal result = BigDecimal.ZERO;
+        if ("PERCENT".equalsIgnoreCase(giamGia.getLoaiGiam())) {
+            if (giamGia.getGiaTri() == null) return BigDecimal.ZERO;
+            result = subtotalApDung.multiply(giamGia.getGiaTri().divide(BigDecimal.valueOf(100)));
+        } else if ("AMOUNT".equalsIgnoreCase(giamGia.getLoaiGiam())) {
+            result = (giamGia.getGiaTri() != null) ? giamGia.getGiaTri() : BigDecimal.ZERO;
+        } else {
+            return BigDecimal.ZERO;
+        }
+
+        // Áp cap GiamToiDa nếu có
+        if (giamGia.getGiamToiDa() != null && giamGia.getGiamToiDa().compareTo(BigDecimal.ZERO) > 0) {
+            result = result.min(giamGia.getGiamToiDa());
+        }
+
+        // Không cho vượt quá subtotal áp dụng
+        if (result.compareTo(subtotalApDung) > 0) result = subtotalApDung;
+
+        return result.max(BigDecimal.ZERO);
+    }
+
     public Map<SanPham, List<SanPhamChiTiet>> getGroupedSanPham() {
-        // 1. Lấy tất cả chi tiết (đã có dung tích)
         List<SanPhamChiTiet> allSPCT = sanPhamChiTietRepo.findAllWithSanPham();
-
-        // 2. Dùng Java Stream để gộp nhóm
-        Map<SanPham, List<SanPhamChiTiet>> groupedProducts = allSPCT.stream()
+        return allSPCT.stream()
                 .collect(Collectors.groupingBy(
-                        SanPhamChiTiet::getSanPham,  // Key là SanPham
-                        LinkedHashMap::new,          // Giữ thứ tự
-                        Collectors.toList()          // Value là List<SanPhamChiTiet>
+                        SanPhamChiTiet::getSanPham,
+                        LinkedHashMap::new,
+                        Collectors.toList()
                 ));
-
-        return groupedProducts;
     }
 }
